--- a/app/design/frontend/base/default/template/paypal/payflowlink/redirect.phtml
+++ b/app/design/frontend/base/default/template/paypal/payflowlink/redirect.phtml
@@ -16,42 +16,51 @@
 ?>
 <html>
 <head>
-<script type="text/javascript">
-//<![CDATA[
-    if (window.top == window.self) {
-        window.location = "<?= $this->getUrl('checkout/cart') ?>";
-    }
-    var window_top = window.top;
-<?php if ($this->getGotoSection()): ?>
-    var checkout_steps;
-
-    try{
-        checkout_steps = window.top.checkout.steps
-    }catch(e){
-        window_top.location="<?= $this->getUrl('checkout/cart') ?>";
-    }
-
-    for (var s = 0; s < checkout_steps.length; s++) {
-        if (checkout_steps[s] == '<?= $this->getGotoSection() ?>') {
-            break;
+    <script type="text/javascript">
+        if (window.top == window.self) {
+            window.location = "<?= $this->getUrl('checkout/cart') ?>";
         }
-        if (window_top.document.getElementById('opc-' + checkout_steps[s])) {
-            window_top.document.getElementById('opc-' + checkout_steps[s]).addClassName('allow');
+        var window_top = window.top;
+        <?php if ($this->getGotoSection()): ?>
+        var checkout_steps;
+
+        try {
+            checkout_steps = window.top.checkout.steps;
+        } catch (e) {
+            window_top.location = "<?= $this->getUrl('checkout/cart') ?>";
         }
-    }
-    window_top.checkout.gotoSection("<?= $this->getGotoSection() ?>");
-    window_top.document.getElementById('checkout-review-submit').show();
-    window_top.document.getElementById('iframe-warning').hide();
-    <?php if ($this->getErrorMsg()): ?>
+
+        for (var s = 0; s < checkout_steps.length; s++) {
+            if (checkout_steps[s] == '<?= $this->getGotoSection() ?>') {
+                break;
+            }
+            const element = window_top.document.getElementById('opc-' + checkout_steps[s]);
+            if (element) {
+                element.classList.add('allow');
+            }
+        }
+
+        window_top.checkout.gotoSection("<?= $this->getGotoSection() ?>");
+
+        const submitElement = window_top.document.getElementById('checkout-review-submit');
+        if (submitElement) {
+            submitElement.style.display = 'block';
+        }
+
+        const warningElement = window_top.document.getElementById('iframe-warning');
+        if (warningElement) {
+            warningElement.style.display = 'none';
+        }
+
+        <?php if ($this->getErrorMsg()): ?>
         alert('<?= $this->jsQuoteEscape($this->getErrorMsg()) ?>');
-    <?php endif ?>
-<?php elseif ($this->getGotoSuccessPage()) : ?>
-    window_top.location="<?= $this->getUrl('checkout/onepage/success') ?>";
-<?php else: ?>
-    window_top.location="<?= $this->getUrl('checkout/cart') ?>";
-<?php endif ?>
-//]]>
-</script>
+        <?php endif ?>
+        <?php elseif ($this->getGotoSuccessPage()) : ?>
+        window_top.location = "<?= $this->getUrl('checkout/onepage/success') ?>";
+        <?php else: ?>
+        window_top.location = "<?= $this->getUrl('checkout/cart') ?>";
+        <?php endif ?>
+    </script>
 </head>
 <body></body>
 </html>
