--- a/app/design/frontend/base/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view.phtml
@@ -89,7 +89,6 @@
         <?php endif ?>
     </form>
     <script type="text/javascript">
-    //<![CDATA[
         var productAddToCartForm = new VarienForm('product_addtocart_form');
         productAddToCartForm.submit = function(button, url) {
             if (this.validator.validate()) {
@@ -97,7 +96,7 @@
                 var oldUrl = form.action;
 
                 if (url) {
-                   form.action = url;
+                    form.action = url;
                 }
                 var e = null;
                 try {
@@ -109,24 +108,28 @@
                     throw e;
                 }
 
-                if (button && button != 'undefined') {
+                if (button && button !== 'undefined') {
                     button.disabled = true;
                 }
             }
         }.bind(productAddToCartForm);
 
-        productAddToCartForm.submitLight = function(button, url){
-            if(this.validator) {
-                var nv = Validation.methods;
+        productAddToCartForm.submitLight = function(button, url) {
+            if (this.validator) {
+                // Store original validation methods
+                const originalMethods = { ...Validation.methods };
+
+                // Remove validation methods
                 delete Validation.methods['required-entry'];
                 delete Validation.methods['validate-one-required'];
                 delete Validation.methods['validate-one-required-by-name'];
-                // Remove custom datetime validators
-                for (var methodName in Validation.methods) {
+
+                // Remove datetime validators
+                Object.keys(Validation.methods).forEach(methodName => {
                     if (methodName.match(/^validate-datetime-.*/i)) {
                         delete Validation.methods[methodName];
                     }
-                }
+                });
 
                 if (this.validator.validate()) {
                     if (url) {
@@ -134,10 +137,11 @@
                     }
                     this.form.submit();
                 }
-                Object.extend(Validation.methods, nv);
+
+                // Restore original validation methods
+                Validation.methods = { ...originalMethods };
             }
         }.bind(productAddToCartForm);
-    //]]>
     </script>
     </div>
 
