--- a/app/design/frontend/rwd/default/template/catalog/msrp/popup.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/msrp/popup.phtml
@@ -35,7 +35,9 @@
             </form>
         </div>
         <script type="text/javascript">
-            document.observe("dom:loaded", Catalog.Map.bindProductForm);
+            document.addEventListener("DOMContentLoaded", () => {
+                Catalog.Map.bindProductForm();
+            });
         </script>
     </div>
     <div class="map-popup-text" id="map-popup-text"><?= Mage::helper('catalog')->getMsrpExplanationMessage() ?></div>
