--- a/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/item/default.phtml
@@ -75,7 +75,7 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
                 <?php $helpLinkId = 'cart-msrp-help-' . $_item->getId(); ?>
                 <a id="<?= $helpLinkId ?>" href="#" class="map-help-link"><?= $this->__("What's this?") ?></a>
                 <script type="text/javascript">
-                    Catalog.Map.addHelpLink($('<?= $helpLinkId ?>'), "<?= Mage::helper('core')->jsQuoteEscape($this->__("What's this?")) ?>");
+                    Catalog.Map.addHelpLink('<?= $helpLinkId ?>', "<?= Mage::helper('core')->jsQuoteEscape($this->__("What's this?")) ?>");
                 </script>
             </span>
         </td>
