--- a/app/design/frontend/base/default/template/wishlist/render/item/price_msrp_item.phtml
+++ b/app/design/frontend/base/default/template/wishlist/render/item/price_msrp_item.phtml
@@ -66,9 +66,9 @@
                 });
 
                 Catalog.Map.addHelpLink(
-                    $('<?= $popupId ?>'),
+                    '<?= $popupId ?>',
                     "<?= $_product->getName() ?>",
-                    $("<?= $priceElementId ?>"),
+                    document.getElementById("<?= $priceElementId ?>"),
                     '<?= $_msrpPrice ?>',
                     "<?= $_product->isSalable() ? $this->getAddToCartUrlCustom($_product, [], false) : '' ?>"
                 );
@@ -83,7 +83,7 @@
         <a href="#" id="<?php echo($helpLinkId);?>"><?= $this->__("What's this?") ?></a>
         <script type="text/javascript">
             Catalog.Map.addHelpLink(
-                $('<?= $helpLinkId ?>'),
+                '<?= $helpLinkId ?>',
                 '<?= Mage::helper('core')->jsQuoteEscape($this->__("What's this?")) ?>'
             );
         </script>
