--- a/app/design/frontend/base/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/media.phtml
@@ -10,54 +10,47 @@
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/**
- * Product media data template
- *
- * @see Mage_Catalog_Block_Product_View_Media
- * @var Mage_Catalog_Block_Product_View_Media $this
- */
+/** @var Mage_Catalog_Block_Product_View_Media $this */
 ?>
 <?php
-    $_product = $this->getProduct();
-    $_helper = $this->helper('catalog/output');
+$_product = $this->getProduct();
+$_helper = $this->helper('catalog/output');
 ?>
-<?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
-<p class="product-image product-image-zoom">
-    <?php
-        $_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image').'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-</p>
-<p class="zoom-notice" id="track_hint"><?= $this->__('Double click on above image to view full picture') ?></p>
-<div class="zoom">
-    <img id="zoom_out" src="<?= $this->getSkinUrl('images/slider_btn_zoom_out.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Zoom Out')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Zoom Out')) ?>" class="btn-zoom-out" />
-    <div id="track">
-        <div id="handle"></div>
+    <div class="product-image product-image-zoom">
+        <div class="product-image-gallery">
+            <img id="image-main"
+                 class="gallery-image visible"
+                 src="<?= $this->helper('catalog/image')->init($_product, 'image') ?>"
+                 alt="<?= $this->escapeHtml($this->getImageLabel()) ?>"
+                 title="<?= $this->escapeHtml($this->getImageLabel()) ?>" />
+
+            <?php $i=0; foreach ($this->getGalleryImages() as $_image): ?>
+                <?php if ($this->isGalleryImageVisible($_image)): ?>
+                    <img id="image-<?= $i ?>"
+                         class="gallery-image" loading="lazy"
+                         src="<?= $this->getGalleryImageUrl($_image) ?>"
+                         data-zoom-image="<?=  $this->getGalleryImageUrl($_image) ?>" />
+                <?php endif ?>
+                <?php $i++; endforeach; ?>
+        </div>
     </div>
-    <img id="zoom_in" src="<?= $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Zoom In')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Zoom In')) ?>" class="btn-zoom-in" />
-</div>
-<script type="text/javascript">
-    window.addEventListener('load', function() {
-        product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
-    });
-</script>
-<?php else: ?>
-<p class="product-image">
-    <?php
-        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->escapeHtml($this->getImageLabel()).'" title="'.$this->escapeHtml($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-</p>
-<?php endif ?>
+
 <?php if (count($this->getGalleryImages()) > 0): ?>
-<div class="more-views">
-    <h2><?= $this->__('More Views') ?></h2>
-    <ul>
-    <?php foreach ($this->getGalleryImages() as $_image): ?>
-        <li>
-            <a href="#" onclick="popWin('<?= $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?= $this->escapeHtml($_image->getLabel()) ?>"><img src="<?= $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56) ?>" width="56" height="56" alt="<?= $this->escapeHtml($_image->getLabel()) ?>" /></a>
-        </li>
-    <?php endforeach ?>
-    </ul>
-</div>
+    <div class="more-views">
+        <h2><?= $this->__('More Views') ?></h2>
+        <ul class="product-image-thumbs">
+            <?php $i=0; foreach ($this->getGalleryImages() as $_image): ?>
+                <?php if ($this->isGalleryImageVisible($_image)): ?>
+                    <li>
+                        <a class="thumb-link" href="#" title="<?= $this->escapeHtml($_image->getLabel()) ?>" data-image-index="<?= $i ?>">
+                            <img src="<?= $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(75) ?>"
+                                 width="75" height="75" alt="<?= $this->escapeHtml($_image->getLabel()) ?>" />
+                        </a>
+                    </li>
+                <?php endif ?>
+                <?php $i++; endforeach; ?>
+        </ul>
+    </div>
 <?php endif ?>
+
+<?= $this->getChildHtml('after') ?>
